--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
     "react-responsive": "^10.0.0",
     "responsive": "^2.0.0"
   },
