--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nextui-org/react": "^2.4.1",
     "@nextui-org/system": "^2.2.1",
     "@nextui-org/theme": "^2.2.5",
+    "@svgr/webpack": "^8.1.0",
     "animate.css": "^4.1.1",
     "framer-motion": "^11.2.10",
     "next": "14.2.4",
@@ -28,7 +29,8 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-responsive": "^10.0.0",
-    "responsive": "^2.0.0"
+    "responsive": "^2.0.0",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "eslint": "^8",
