--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@svgr/webpack": "^8.1.0",
     "animate.css": "^4.1.1",
     "framer-motion": "^11.2.10",
+    "hero-patterns": "^2.1.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -30,7 +31,8 @@
     "react-intersection-observer": "^9.10.3",
     "react-responsive": "^10.0.0",
     "responsive": "^2.0.0",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "tailwindcss-hero-patterns": "^0.1.2"
   },
   "devDependencies": {
     "eslint": "^8",
