--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nextui-org/theme": "^2.2.5",
     "@svgr/webpack": "^8.1.0",
     "animate.css": "^4.1.1",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.2.10",
     "hero-patterns": "^2.1.0",
     "next": "14.2.4",
