--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@svgr/webpack": "^8.1.0",
     "animate.css": "^4.1.1",
     "classnames": "^2.5.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.2.10",
     "hero-patterns": "^2.1.0",
     "next": "14.2.4",
