--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.26.1",
     "react-typed": "^2.0.12",
     "responsive": "^2.0.0",
     "swiper": "^11.1.4",
